# ChangeLog for www-plugins/chrome-binary-plugins
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.174 2014/08/31 02:13:05 floppym Exp $

*chrome-binary-plugins-39.0.2138.3_alpha1 (31 Aug 2014)
*chrome-binary-plugins-38.0.2125.24_beta1 (31 Aug 2014)

  31 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-38.0.2125.24_beta1.ebuild,
  +chrome-binary-plugins-39.0.2138.3_alpha1.ebuild,
  -chrome-binary-plugins-37.0.2062.94_beta1.ebuild,
  -chrome-binary-plugins-38.0.2125.24_alpha1.ebuild:
  Automated update.

  28 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  chrome-binary-plugins-37.0.2062.94_beta1.ebuild,
  chrome-binary-plugins-38.0.2125.24_alpha1.ebuild:
  Sync the other slots.

  28 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  chrome-binary-plugins-37.0.2062.94_p1.ebuild:
  Fix ${S} in the stable slot.

  27 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  chrome-binary-plugins-37.0.2062.94_p1.ebuild:
  Copy beta to stable.

*chrome-binary-plugins-38.0.2125.24_alpha1 (27 Aug 2014)
*chrome-binary-plugins-37.0.2062.94_p1 (27 Aug 2014)

  27 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.94_p1.ebuild,
  +chrome-binary-plugins-38.0.2125.24_alpha1.ebuild,
  -chrome-binary-plugins-36.0.1985.143_p1.ebuild,
  -chrome-binary-plugins-38.0.2125.8_alpha1.ebuild:
  Automated update.

*chrome-binary-plugins-38.0.2125.8_alpha1 (23 Aug 2014)

  23 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-38.0.2125.8_alpha1.ebuild,
  -chrome-binary-plugins-38.0.2125.0_alpha1.ebuild:
  Automated update.

*chrome-binary-plugins-37.0.2062.94_beta1 (21 Aug 2014)

  21 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.94_beta1.ebuild,
  -chrome-binary-plugins-37.0.2062.76_beta1.ebuild:
  Automated update.

*chrome-binary-plugins-38.0.2125.0_alpha1 (19 Aug 2014)
