@@ -1,6 +1,6 @@
 DEFINED_PHASES=install nofetch unpack
 DESCRIPTION=Binary plugins from Google Chrome for use in Chromium
-EAPI=4
+EAPI=5
 HOMEPAGE=http://www.google.com/chrome
 IUSE=+flash
 KEYWORDS=~amd64 ~x86
@@ -8,6 +8,6 @@ LICENSE=google-chrome
 RDEPEND=!www-plugins/chrome-binary-plugins:0 !www-plugins/chrome-binary-plugins:beta !www-plugins/chrome-binary-plugins:unstable
 RESTRICT=bindist mirror strip
 SLOT=stable
-SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_37.0.2062.94-1_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_37.0.2062.94-1_i386.deb )
+SRC_URI=amd64? ( https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_37.0.2062.94-1_amd64.deb ) x86? ( https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_37.0.2062.94-1_i386.deb )
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=c8dc18da1a11f715f593b16b0ea29b6c
+_md5_=7e2f2e39b484b10fbae9befe206aa865
