@@ -1,6 +1,6 @@
 DEFINED_PHASES=install nofetch unpack
 DESCRIPTION=Binary plugins from Google Chrome for use in Chromium
-EAPI=4
+EAPI=5
 HOMEPAGE=http://www.google.com/chrome
 IUSE=+flash
 KEYWORDS=~amd64 ~x86
@@ -8,6 +8,6 @@ LICENSE=google-chrome
 RDEPEND=!www-plugins/chrome-binary-plugins:0 !www-plugins/chrome-binary-plugins:stable !www-plugins/chrome-binary-plugins:unstable
 RESTRICT=bindist mirror strip
 SLOT=beta
-SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-beta/google-chrome-beta_38.0.2125.24-1_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-beta/google-chrome-beta_38.0.2125.24-1_i386.deb )
+SRC_URI=amd64? ( https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-beta/google-chrome-beta_38.0.2125.24-1_amd64.deb ) x86? ( https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-beta/google-chrome-beta_38.0.2125.24-1_i386.deb )
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=545835a226a151e23c433ff8fca10600
+_md5_=7d410e2f6cf24235b11184d921daa2a7
