@@ -1,6 +1,6 @@
 DEFINED_PHASES=install nofetch unpack
 DESCRIPTION=Binary plugins from Google Chrome for use in Chromium
-EAPI=4
+EAPI=5
 HOMEPAGE=http://www.google.com/chrome
 IUSE=+flash
 KEYWORDS=~amd64 ~x86
@@ -8,6 +8,6 @@ LICENSE=google-chrome
 RDEPEND=!www-plugins/chrome-binary-plugins:0 !www-plugins/chrome-binary-plugins:beta !www-plugins/chrome-binary-plugins:stable
 RESTRICT=bindist mirror strip
 SLOT=unstable
-SRC_URI=amd64? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_39.0.2138.3-1_amd64.deb ) x86? ( http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_39.0.2138.3-1_i386.deb )
+SRC_URI=amd64? ( https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_39.0.2138.3-1_amd64.deb ) x86? ( https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-unstable/google-chrome-unstable_39.0.2138.3-1_i386.deb )
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=f7e7da5f28cef9176b1954e619babfc0
+_md5_=0f898bd20ecc84c687d4d3112e534781
