@@ -7,16 +7,16 @@ DIST google-chrome-stable_37.0.2062.94-1_amd64.deb 49195682 SHA256 5ceb34e2f2c8f
 DIST google-chrome-stable_37.0.2062.94-1_i386.deb 49680628 SHA256 132d6272b3c5ecbdc5f29f42b7ab2e8e7081cd232d2ec33c02dc56f21dbc5f6f SHA512 52fb8da03ebce58f8958adaedc3c56cf7a253cff85a0333156fc59da5126500f5e1e8d5e7f00141ae8767d51ca9cb6d857fd25f8e460d0c1c5edac6e18505b64 WHIRLPOOL 7f6ae6aec02b38fb52f2fa0020a396e0a2de1fa392d3deaa687a01ffb1213cbd832081e4282c83d437cf01ada55dd332c269abb61f26172664c772f5dce6927e
 DIST google-chrome-unstable_39.0.2138.3-1_amd64.deb 47512664 SHA256 5d32d7aa7544f2654d8fd8a53b91c55dbeeb8f6926aa0df995a06015bbf2be3d SHA512 912aa5b6fc86f716ce33803bed5e5a7487f4d3d1a048efa171fe08b9f6febe1a22500173f2b20bd7b2b923a5d6eae926f6501a01e545dab7f0908fda1ec93d03 WHIRLPOOL 90171d3685fb878a28c372a0a9bc0f47435fb186308be1d27b2fffa68cbbc76298e78785078bbffe2f38e2e8cdf89b509a6f8a2ea56c63c9a78fe6e2d469a27a
 DIST google-chrome-unstable_39.0.2138.3-1_i386.deb 47341558 SHA256 583811fc0143b138a448ace4a13264c2814cc58e20d16578ad77435b4a5e5367 SHA512 cc46d617d1227660a4b3dd5d50218258ba33b3f2d7b87b8d1bb55f630f66d3ff70a3166935b8bd4bcfabea9425d6c51916b53ff0d2cecdc9948374faec1150e7 WHIRLPOOL 02311100aa81ba1f5a991ed1a2907f98f524c5df37a34f3c8d197a8cd052dedacce2022105978bbf7fa9cea3b1304de93eb0ebee57b037d3f77ffe674b4fc026
-EBUILD chrome-binary-plugins-37.0.2062.94_p1.ebuild 2014 SHA256 0a04d71e1aaf3dd7ed0b78d4d5b0afd0a745a31ac981cb57aebbdfbd01c66834 SHA512 99c503234de18d916a19f35306ae2b9b614d98fa87af4217fda42f6c443fb9667b363e8daea7413b55213d8c6a14599b5fd45c81b17d6adb301b99ff4609e9e9 WHIRLPOOL 7c9b6e4d61847a99366a530a0f54dc1861bff4d451768396cbe083f0ea4890ec5ac1295e777b41446156a8dd6fd56b2f56c481f9f4f1f1dadafdc8b1f3d5ea70
-EBUILD chrome-binary-plugins-38.0.2125.24_beta1.ebuild 2017 SHA256 e4f78177d8ceacc1fc2bebeb9d6dc6086074beb2a72a010ebee00c8b71f8f8b8 SHA512 018afc4f9e89b53e3d315335b457b4fd984251f84951224f5667fce58151b70f5bccb1ebfe6d3e5eeb5d53388331da52700bb983db5e82fef65d086450ecf86f WHIRLPOOL 40e51161a8556bde1967305d414c3a11ddc455fe0b1f3130787cd9d30632357878fd6aa31e621da75f6d4e8181e8094de50c9a4d0712519270ab909ea8417ca2
-EBUILD chrome-binary-plugins-39.0.2138.3_alpha1.ebuild 2017 SHA256 52f99abb05d0fff0aee7504a4bcdb04df486673b6e716bf21c23bcaf5bfc33ea SHA512 7db8df20cb805455e8dc6cd19c48bdcb0259222abd308698ee93a938bd94d3a5b24a1d2d4d1f0b946ee9b07dc86408405a70b838a3d6a5b2ed0f09b75275b282 WHIRLPOOL 6564fe5313d0af2e626413dd6a82607467575a08ada28b38675826974a364dc441568eca7017e4005b5c9bfa9a02b175799416c046629b52804881991898199d
-EBUILD chrome-binary-plugins-9999.ebuild 1854 SHA256 91cd05b8aa8b0ef6370a0257eba4e628bb34e9fd14994cbf945b4f49bcf7db41 SHA512 46155849c7869673d452f499a9556b12e2395cfa5659d44e8eb389a9ea79ae07eabe003cb31538218e407f9dafbb0d7b1555ab6cb1532b5e950e4eaaecaacb0b WHIRLPOOL af348ef6ddc419767d94a394cbc6de23eac215140eeb4073d00ecab2c66d416d17d1cebb317a2fba9526a80bda7f73f26081f9f7dd5b7a5473ce2c6264356549
-MISC ChangeLog 48492 SHA256 dbc5b2a098caf4904a9bd29e8033f5949f0175df5ecb257d7c54c985de9e0a28 SHA512 7d7d4a80e0464263d4629466e33adb707e526df871e18a43acae7cf86f61005d82b445c1c77042126df9620eaa2455a03f1d31dea62b83594e41d9828287f9f7 WHIRLPOOL ace9de59dab45aa44fa8abcded7d7dfb6f40ad10b29a345bf882d94a0fc566fbc678a6a5bc7a086d229e4c6e0ef31a722948f52ff0e26bc85894a54ca8b97717
-MISC metadata.xml 409 SHA256 d40d69b26dd8aefe8da69937e54e0a885d6867e28e42c5dcbe193233a84ee533 SHA512 bdf4f11c173af9f80b3475f8ea32ba966806d1e0e694bd55a6a4960717e3f3ffff69eabb060ae5ee4d3b39cdf18eeeff45c9d431c3b6ce8ae5c271c7a409aa71 WHIRLPOOL 7319320d648a8aae0eec726a8ab489bb71fe5f93dfb40847e97344a02be85a09ba931d5aeee8fdb13d899de3c90746c75a59897287c715dd771dfbe8863b803b
+EBUILD chrome-binary-plugins-37.0.2062.94_p1.ebuild 2308 SHA256 9386b4bcd4565aa69b71a027344d91758644b21722f92997754161d67a06fa9c SHA512 f67fcb5ebaeda91c538d987f1a5217ce6964be615a92af2c5d86256035841a4e8dbe2788b13916c74cc2cdf8c4a495576e389687003a84d9830224d27f71b212 WHIRLPOOL e5cf4dadb21f40ad5b9d9819a03ea4fd418b6564f6d7eb56b5650ae8648e5d76adc3b177d7791f379bfb5c0ddeb23d69c8a748dd8d8c137890515ad6d1c083a3
+EBUILD chrome-binary-plugins-38.0.2125.24_beta1.ebuild 2311 SHA256 733ae6a598610ddcc726123e8712e1235871aa7ce1051f90c258020c20f9517e SHA512 2583e6ef3370e870acc2ee15d17e3d400ee95a8fcf72e32416295ce2469d8866392a2c2c8ea9e01b486f6357b0dae40b9e8fa8feed7effddd9a6229b32813a72 WHIRLPOOL 9f1de199c6e11a9b365b65730963e3f07aa1eb102bfa8200e9d42e11f0a2f7234ec917e8149de749e0fa5e096c6aaf6377c13d0513bcaed9966ae675ad8ba871
+EBUILD chrome-binary-plugins-39.0.2138.3_alpha1.ebuild 2311 SHA256 2c6cabff7d63fc26ad9db4440131d3b4a71493ecb3fab8399a18d066b2e0cbd2 SHA512 74f51c71beb8b612a251c2324c01e15382ea7184ef53a7f4b4a5b790d6821a28d159b30160b3e5751b76ce555f56f80b62362d54cfc595b173239a50487e9330 WHIRLPOOL 72d567d23a1a06c7c78734d38b11f2ab8cb128a79beecfdefeed1a8ac2c5a07fc8ed75a676b53f4e08d4f4f7d539064235263211bd39d5aa9ab270bdff3a8da4
+EBUILD chrome-binary-plugins-9999.ebuild 2298 SHA256 c78bc74daee0471bf8a44a6eef690519cee76dd49030b203af53afe92aecc579 SHA512 76f3eb470b598e9882263bd7d3f36129478c4c61660803a13e00754fa9219f35554cb1c84ee43a62004fd8a688323bf42f5fdd521365e8c70d696a5d04b0fa59 WHIRLPOOL f0fb53a3143e3cd26b7ac6f55c8c16bf752bc6b3056e2371604e1059fc61bf327d52db801007ca650935a11709ad45ce1f126b7bb7400cc24fe2164005b9add1
+MISC ChangeLog 48791 SHA256 f431e5bed9c4f75f06c3f64871302600e1bbd41468a750b28a71b3518de1425a SHA512 4bb05a4dd991ed17d5491c227a8f525493b98f1998648008c9140aab0486d0c5c0931ef3c5e6880c163c50e1e8eff938ffebab118cc8a4940ca3d4f3a994c1ba WHIRLPOOL c7fd1357670ce823c8383af3bbfe0922a72a603ab2e6f21545f33caffcfc916985e3f5c7ad75c5276d3db0759a2d797e518d426c2db6bb506943bb4a8cf98fc4
+MISC metadata.xml 339 SHA256 825104ef8722947d0eda126b53e44f3723a04301c6ada6d648a287c7ac2137df SHA512 63839a441beaa22293982a9edf3e078fc9de313eabd921142b823f8e57f6d945e2798ea3bc4f55d3eb52d627a2926c11261387800e708a7c11166da2227db4eb WHIRLPOOL b90a58884334ea31201e0471eecbd3a5549a38191c08c3c3fba3545ec20b594989c74d0dc4ab61b9cd609efc89cf576e208d9bb34c2f7668d530108f9385144e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlQChLMACgkQC77qH+pIQ6QNIwD/SkXMcfl9bqsyDSjZK0RbTtaW
-3SX1JchzJoKZdOLMsqYA/A4p4MIJPdcOe8Jx4KXKyK6/HJcG8bVIVMDQl8sUBq3K
-=P+HZ
+iF4EAREIAAYFAlQDq64ACgkQC77qH+pIQ6SDqAEAqX5D3BxjXFsPnou5+yHJHT4U
+TcHZT4P/a2vEbfj8KOoA/2nXi/ulfw2F0IClhknB79aShfyTijJqskLh6sJM26LL
+=IMse
 -----END PGP SIGNATURE-----
