@@ -1,21 +1,52 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/chrome-binary-plugins-9999.ebuild,v 1.13 2014/08/08 02:26:33 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/chrome-binary-plugins-9999.ebuild,v 1.14 2014/08/31 23:11:41 floppym Exp $
 
-EAPI=4
+EAPI=5
 
 inherit multilib unpacker
 
 DESCRIPTION="Binary plugins from Google Chrome for use in Chromium"
 HOMEPAGE="http://www.google.com/chrome"
-SLOT="unstable"
-URI_BASE="https://dl.google.com/linux/direct/"
-URI_BASE_NAME="google-chrome-${SLOT}_current_"
-SRC_URI="" # URI is left blank on live ebuild
+
+case ${PV} in
+	*_alpha*|9999*)
+		SLOT="unstable"
+		CHROMEDIR="opt/google/chrome-${SLOT}"
+		MY_PV=${PV/_alpha/-}
+		;;
+	*_beta*)
+		SLOT="beta"
+		CHROMEDIR="opt/google/chrome-${SLOT}"
+		MY_PV=${PV/_beta/-}
+		;;
+	*_p*)
+		SLOT="stable"
+		CHROMEDIR="opt/google/chrome"
+		MY_PV=${PV/_p/-}
+		;;
+	*)
+		die "Invalid value for \${PV}: ${PV}"
+		;;
+esac
+
+MY_PN="google-chrome-${SLOT}"
+MY_P="${MY_PN}_${MY_PV}"
+
+if [[ ${PV} != 9999* ]]; then
+SRC_URI="
+	amd64? (
+		https://dl.google.com/linux/chrome/deb/pool/main/g/${MY_PN}/${MY_P}_amd64.deb
+	)
+	x86? (
+		https://dl.google.com/linux/chrome/deb/pool/main/g/${MY_PN}/${MY_P}_i386.deb
+	)
+"
+KEYWORDS="~amd64 ~x86"
+fi
 
 LICENSE="google-chrome"
-KEYWORDS="" # KEYWORDS is also left blank on live ebuild
-IUSE="+flash +pdf"
+IUSE="+flash"
 RESTRICT="bindist mirror strip"
 
 for x in 0 beta stable unstable; do
@@ -24,29 +55,26 @@ for x in 0 beta stable unstable; do
 	fi
 done
 
-S="${WORKDIR}/opt/google/chrome-${SLOT}"
+S="${WORKDIR}/${CHROMEDIR}"
 QA_PREBUILT="*"
 
-src_unpack() {
-	# We have to do this inside of here, since it's a live ebuild. :-(
-
-	if use x86; then
-		G_ARCH="i386";
-	elif use amd64; then
-		G_ARCH="amd64";
-	else
-		die "This only supports x86 and amd64."
-	fi
-	wget "${URI_BASE}${URI_BASE_NAME}${G_ARCH}.deb"
-	unpack_deb "./${URI_BASE_NAME}${G_ARCH}.deb"
+pkg_nofetch() {
+	eerror "Please wait 24 hours and sync your portage tree before reporting fetch failures."
 }
+
+if [[ ${PV} == 9999* ]]; then
+src_unpack() {
+	local base="https://dl.google.com/linux/direct"
+	local debarch=${ARCH/x86/i386}
+	wget -O google-chrome.deb "${base}/google-chrome-${SLOT}_current_${debarch}.deb" || die
+	unpack_deb ./google-chrome.deb
+}
+fi
 
 src_install() {
 	local version flapper
 
 	insinto /usr/$(get_libdir)/chromium-browser/
-
-	use pdf && doins libpdf.so
 
 	if use flash; then
 		doins -r PepperFlash
