@@ -1,6 +1,13 @@
 # ChangeLog for www-plugins/chrome-binary-plugins
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.174 2014/08/31 02:13:05 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.175 2014/08/31 23:11:41 floppym Exp $
+
+  31 Aug 2014; Mike Gilbert <floppym@gentoo.org>
+  chrome-binary-plugins-37.0.2062.94_p1.ebuild,
+  chrome-binary-plugins-38.0.2125.24_beta1.ebuild,
+  chrome-binary-plugins-39.0.2138.3_alpha1.ebuild,
+  chrome-binary-plugins-9999.ebuild, metadata.xml:
+  EAPI=5. Consolidate code for the live ebuild.
 
 *chrome-binary-plugins-39.0.2138.3_alpha1 (31 Aug 2014)
 *chrome-binary-plugins-38.0.2125.24_beta1 (31 Aug 2014)
